Added MongoDB Event Store subscription